# faast-assignments

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pylint.yml  python-package.yml
life_expectancy/: cleaning.py  cleaning_strategies.py  data_io.py  region.py
life_expectancy/tests/: conftest.py  test_cleaning.py  test_cleaning_strategies.py  test_dataio.py  test_region.py
life_expectancy/tests/fixtures/: eu_life_expectancy_raw.tsv  generate_fixtures.py  pt_life_expectancy_expected.csv
